--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2310,6 +2310,9 @@ qc-search-bar {
           mask-repeat: no-repeat;
   flex-shrink: 0;
 }
+.qc-button .qc-icon.custom {
+  background-color: unset;
+}
 .qc-button.qc-simple {
   color: var(--qc-color-blue-piv);
   background-color: transparent;
