--- a/src/sdg/components/Button/_button.scss
+++ b/src/sdg/components/Button/_button.scss
@@ -148,6 +148,10 @@
     mask-size: 100% 100%;
     mask-repeat: no-repeat;
     flex-shrink: 0;
+
+    &.custom {
+      background-color: unset;
+    }
   }
 
   &.qc-simple {
