Ajout de la prise en charge des icônes personnalisées avec une nouvelle propriété `src`.

--- a/src/sdg/components/Icon/_icons.scss
+++ b/src/sdg/components/Icon/_icons.scss
@@ -25,6 +25,12 @@ qc-icon {
       mask-size: 100% 100%;
     }
   }
+  .custom-icon {
+    mask:var(--img-src);
+    mask-size: 100% 100%;
+
+  }
+
 
   &.qc-icon-sm {
     min-width: 12px;
