--- a/src/sdg/components/Button/_button.scss
+++ b/src/sdg/components/Button/_button.scss
@@ -149,8 +149,9 @@
     mask-repeat: no-repeat;
     flex-shrink: 0;
 
-    &.custom {
-      background-color: unset;
+    &.qc-custom-icon {
+      mask:var(--img-src);
+      mask-size: 100% 100%;
     }
   }
 
