Recompilation après le merge

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -104,8 +104,12 @@
   --qc-color-pink-regular-rgb: 229, 130, 113;
   --qc-color-red-pale: var(--qc-color-pink-pale);
   --qc-color-red-light: var(--qc-color-pink-regular);
+  --qc-color-red-regular_light: #eb705a;
+  --qc-color-red-regular_light-rgb: 235, 112, 90;
   --qc-color-red-regular: #cb381f;
   --qc-color-red-regular-rgb: 203, 56, 31;
+  --qc-color-red-medium: #b52e16;
+  --qc-color-red-medium-rgb: 181, 46, 22;
   --qc-color-red-dark: #692519;
   --qc-color-red-dark-rgb: 105, 37, 25;
   --qc-color-green-pale: #d7f0bb;
@@ -224,8 +228,12 @@
   --qc-color-pink-pale-rgb: 79, 24, 14;
   --qc-color-pink-regular: #BB3A23;
   --qc-color-pink-regular-rgb: 187, 58, 35;
+  --qc-color-red-regular_light: #D34027;
+  --qc-color-red-regular_light-rgb: 211, 64, 39;
   --qc-color-red-regular: #F26049;
   --qc-color-red-regular-rgb: 242, 96, 73;
+  --qc-color-red-medium: #F19387;
+  --qc-color-red-medium-rgb: 241, 147, 135;
   --qc-color-red-dark: #F3BCB6;
   --qc-color-red-dark-rgb: 243, 188, 182;
   --qc-color-green-pale: #1E2F17;
@@ -376,8 +384,16 @@ body:focus-within {
   background-color: var(--qc-color-red-light);
 }
 
+.qc-bg-color-red-regular_light {
+  background-color: var(--qc-color-red-regular_light);
+}
+
 .qc-bg-color-red-regular {
   background-color: var(--qc-color-red-regular);
+}
+
+.qc-bg-color-red-medium {
+  background-color: var(--qc-color-red-medium);
 }
 
 .qc-bg-color-red-dark {
@@ -2309,4 +2325,163 @@ qc-textfield {
 }
 .qc-label.qc-label-bold {
   font-weight: var(--qc-font-weight-content-bold);
+}
+
+.qc-button {
+  font-family: var(--qc-font-family-content);
+  font-size: var(--qc-font-size-md);
+  font-weight: var(--qc-font-weight-bold);
+  line-height: var(--qc-line-height-md);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+  box-sizing: border-box;
+  min-width: 11.2rem;
+  max-width: 36rem;
+  min-height: 5.6rem;
+  padding: 1.6rem 2.4rem;
+  transition: all 0.24s ease-in-out;
+  vertical-align: middle;
+  border: 2px solid transparent;
+  cursor: pointer;
+  margin-right: 3.2rem;
+  margin-bottom: var(--qc-spacer-md);
+}
+@media (max-width: 767.98px) {
+  .qc-button {
+    width: 100%;
+  }
+}
+.qc-button.qc-compact {
+  font-weight: var(--qc-font-weight-semi-bold);
+  min-width: 8rem;
+  min-height: 4rem;
+  padding: 0.8rem 1.6rem;
+  border-width: 1px;
+}
+@media (max-width: 767.98px) {
+  .qc-button.qc-compact {
+    width: 100%;
+  }
+}
+.qc-button.qc-button-rounded {
+  border-radius: 0.4rem;
+}
+.qc-button.qc-primary {
+  color: var(--qc-color-white);
+  background-color: var(--qc-color-blue-piv);
+  border-color: var(--qc-color-blue-piv);
+  box-shadow: 0 1px 4px rgba(34, 54, 84, 0.24);
+}
+.qc-button.qc-primary:hover:not(:disabled) {
+  background-color: var(--qc-color-blue-regular);
+  border-color: var(--qc-color-blue-regular);
+}
+.qc-button.qc-primary:focus:not(:disabled) {
+  background-color: var(--qc-color-blue-regular);
+  border-color: var(--qc-color-blue-dark);
+  box-shadow: 0 2px 8px rgba(34, 54, 84, 0.24), 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-primary:active:not(:disabled) {
+  background-color: var(--qc-color-blue-regular_light);
+  border-color: var(--qc-color-blue-regular_light);
+}
+.qc-button.qc-secondary {
+  color: var(--qc-color-blue-piv);
+  background-color: var(--qc-color-white);
+  border-color: var(--qc-color-blue-piv);
+}
+.qc-button.qc-secondary:hover:not(:disabled), .qc-button.qc-secondary:focus:not(:disabled), .qc-button.qc-secondary:active:not(:disabled) {
+  background-color: rgba(9, 87, 151, 0.16);
+}
+.qc-button.qc-secondary:focus:not(:disabled) {
+  border-color: var(--qc-color-blue-dark);
+  box-shadow: 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-secondary:active:not(:disabled) {
+  background-color: rgba(9, 87, 151, 0.08);
+}
+.qc-button.qc-tertiary {
+  color: var(--qc-color-blue-piv);
+  background-color: var(--qc-color-white);
+  border-color: var(--qc-color-white);
+}
+.qc-button.qc-tertiary:hover:not(:disabled) {
+  background-color: rgba(197, 202, 210, 0.24);
+  text-decoration: underline;
+}
+.qc-button.qc-tertiary:focus:not(:disabled) {
+  background-color: rgba(197, 202, 210, 0.24);
+  border-color: var(--qc-color-blue-dark);
+  box-shadow: 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-tertiary:active:not(:disabled) {
+  background-color: rgba(197, 202, 210, 0.16);
+}
+.qc-button.qc-danger {
+  color: var(--qc-color-white);
+  background-color: var(--qc-color-red-regular);
+  border-color: var(--qc-color-white);
+}
+.qc-button.qc-danger:hover:not(:disabled) {
+  background-color: var(--qc-color-red-medium);
+}
+.qc-button.qc-danger:focus:not(:disabled) {
+  background-color: var(--qc-color-red-medium);
+  border-color: var(--qc-color-blue-dark);
+  box-shadow: 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-danger:active:not(:disabled) {
+  background-color: var(--qc-color-red-regular_light);
+}
+.qc-button:disabled, .qc-button.qc-disabled {
+  background-color: var(--qc-color-grey-light);
+  border-color: var(--qc-color-grey-light);
+  color: var(--qc-color-white);
+  cursor: not-allowed;
+  box-shadow: none;
+  opacity: 1;
+}
+.qc-button .qc-icon {
+  display: inline-block;
+  width: 1.6rem;
+  height: 1.6rem;
+  background-color: currentColor;
+  -webkit-mask-size: 100% 100%;
+          mask-size: 100% 100%;
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  flex-shrink: 0;
+}
+.qc-button .qc-icon.qc-custom-icon {
+  -webkit-mask: var(--img-src);
+          mask: var(--img-src);
+  -webkit-mask-size: 100% 100%;
+          mask-size: 100% 100%;
+}
+.qc-button.qc-simple {
+  color: var(--qc-color-blue-piv);
+  background-color: transparent;
+  border-color: transparent;
+  padding: 0;
+  min-width: unset;
+  min-height: unset;
+}
+.qc-button.qc-simple:hover:not(:disabled), .qc-button.qc-simple:active:not(:disabled) {
+  text-decoration: underline;
+}
+.qc-button.qc-simple:focus:not(:disabled) {
+  border-color: var(--qc-color-blue-light);
+  box-shadow: 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-simple.qc-compact {
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+}
+.qc-button.qc-simple:disabled, .qc-button.qc-simple.qc-disabled {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+  box-shadow: none;
+  opacity: 1;
 }
