Correction de la place de qc-disabled dans la structure HTML de DropdownList.svelte

--- a/src/sdg/components/DropdownList/_dropdownList.html
+++ b/src/sdg/components/DropdownList/_dropdownList.html
@@ -115,7 +115,7 @@
             invalid-text="Veuillez choisir un type de restaurant."
         >
             <qc-option value="Pizzeria">Pizzeria</qc-option>
-            <qc-option value="Patisserie">Patisserie</qc-option>
+            <qc-option value="Pâtisserie">Pâtisserie</qc-option>
             <qc-option value="Steakhouse">Steakhouse</qc-option>
             <qc-option value="Bar">Bar</qc-option>
             <qc-option value="Casse-croûte">Casse-croûte</qc-option>
