Correction de définitions d'attributs dans la doc de DropdownList

--- a/src/sdg/components/DropdownList/_dropdownList.html
+++ b/src/sdg/components/DropdownList/_dropdownList.html
@@ -295,7 +295,7 @@
             <td>label</td>
             <td>Contenu HTML</td>
             <td>Corps du <code>qc-option</code></td>
-            <td>Texte de l'option.</td>
+            <td>Texte de l'option</td>
         </tr>
         <tr>
             <td>value</td>
@@ -314,9 +314,9 @@
             <td>na</td>
             <td>na</td>
             <td>
-                Indique que l'option est présélectionnée au chargement de la page.
-                <br> N.B. : Si l'attribut est absent de la liste déroulante parente, la première option ayant l'attribut <code>selected</code>
-                sera présélectionnée.
+                État de sélection de l'option
+                <br> N.B. : Si l'attribut <code>multiple</code> est absent de la liste déroulante parente ou est mis à <code>false</code>,
+                la première option ayant l'attribut <code>selected</code> sera présélectionnée.
             </td>
         </tr>
         </tbody>
