--- a/src/sdg/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/components/DropdownList/_dropdownList.scss
@@ -16,11 +16,11 @@ $border: 1;
     border: rem(2) solid token-value(color, red, regular) !important;
   }
 
+  &-xs { max-width: token-value(spacer, input, xs); }
   &-sm { max-width: token-value(spacer, input, sm); }
   &-md { max-width: token-value(spacer, input, md); }
   &-lg { max-width: token-value(spacer, input, lg); }
   &-xl { max-width: token-value(spacer, input, xl); }
-  &-xxl { max-width: token-value(spacer, input, xxl); }
 }
 
 .qc-dropdown-list-search {
