--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1999,31 +1999,38 @@ qc-search-bar {
   background-color: rgba(var(--qc-color-grey-light-rgb), 0.16);
 }
 
-.qc-check-row {
+.qc-selection-button, .qc-check-row {
   display: flex;
   align-items: start;
-  min-height: var(--qc-spacer-md);
   margin: 0;
-  padding: 0;
 }
-.qc-check-row input[type=radio],
+.qc-selection-button:not(:has(input:disabled)):hover, .qc-check-row:not(:has(input:disabled)):hover {
+  cursor: pointer;
+}
+.qc-selection-button:has(input:disabled), .qc-check-row:has(input:disabled) {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+}
+.qc-selection-button input[type=radio], .qc-check-row input[type=radio],
+.qc-selection-button input[type=checkbox],
 .qc-check-row input[type=checkbox] {
   display: flex;
   position: relative;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  flex-shrink: 0;
-  cursor: pointer;
-  margin: 0;
+  margin: 0 var(--qc-spacer-xs) 0 0;
   background-color: var(--qc-color-white);
   border-style: solid;
   border-color: var(--qc-color-blue-dark);
-  width: var(--qc-spacer-md);
-  height: var(--qc-spacer-md);
-  border-width: 2px;
 }
-.qc-check-row input[type=radio]::before,
+.qc-selection-button input[type=radio]:not(:disabled):hover, .qc-check-row input[type=radio]:not(:disabled):hover,
+.qc-selection-button input[type=checkbox]:not(:disabled):hover,
+.qc-check-row input[type=checkbox]:not(:disabled):hover {
+  cursor: pointer;
+}
+.qc-selection-button input[type=radio]::before, .qc-check-row input[type=radio]::before,
+.qc-selection-button input[type=checkbox]::before,
 .qc-check-row input[type=checkbox]::before {
   content: "";
   position: absolute;
@@ -2032,74 +2039,151 @@ qc-search-bar {
   overflow: hidden;
   opacity: 0;
 }
-.qc-check-row input[type=radio]:focus,
-.qc-check-row input[type=checkbox]:focus {
-  outline: 2px solid var(--qc-color-blue-light);
-  outline-offset: 0;
-  border-color: var(--qc-color-blue-dark) !important;
-  border-width: 2px;
-}
-.qc-check-row input[type=radio]:checked,
+.qc-selection-button input[type=radio]:checked, .qc-check-row input[type=radio]:checked,
+.qc-selection-button input[type=checkbox]:checked,
 .qc-check-row input[type=checkbox]:checked {
   border-color: var(--qc-color-blue-regular);
 }
-.qc-check-row input[type=radio]:disabled,
+.qc-selection-button input[type=radio]:disabled, .qc-check-row input[type=radio]:disabled,
+.qc-selection-button input[type=checkbox]:disabled,
 .qc-check-row input[type=checkbox]:disabled {
   cursor: not-allowed;
   border-color: var(--qc-color-grey-light);
 }
-.qc-check-row input[type=radio]:disabled + label,
-.qc-check-row input[type=checkbox]:disabled + label {
-  color: var(--qc-color-grey-regular);
-  cursor: not-allowed;
-}
-.qc-check-row label {
-  cursor: pointer;
-  padding-left: var(--qc-spacer-xs);
-  padding-right: var(--qc-spacer-xs);
-  margin-bottom: 0;
+.qc-selection-button .qc-check-label, .qc-check-row .qc-check-label {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-regular);
 }
 
-.qc-compact input[type=radio],
-.qc-compact input[type=checkbox] {
-  width: var(--qc-spacer-sm);
-  height: var(--qc-spacer-sm);
-  border-width: 1px;
-  top: 0.4rem;
+.qc-check-row {
+  flex-grow: 0;
+}
+.qc-check-row input[type=radio],
+.qc-check-row input[type=checkbox] {
+  min-width: var(--qc-spacer-md);
+  min-height: var(--qc-spacer-md);
+  border-width: 0.2rem;
+}
+.qc-check-row input[type=radio]:focus,
+.qc-check-row input[type=checkbox]:focus {
+  outline: 2px solid var(--qc-color-blue-light);
+  outline-offset: 0;
+  border-color: var(--qc-color-blue-dark) !important;
+}
+.qc-check-row input[type=radio]:checked,
+.qc-check-row input[type=checkbox]:checked {
+  border-color: var(--qc-color-blue-regular);
 }
 
-.qc-check-row input[type=radio] {
+.qc-selection-button {
+  position: relative;
+  z-index: 10;
+  background: transparent;
+  border: 0;
+  flex-grow: 1;
+  padding: var(--qc-spacer-sm);
+}
+.qc-selection-button::before {
+  position: absolute;
+  display: block;
+  content: "";
+  background-color: var(--qc-color-background);
+  inset: 0;
+  z-index: -5;
+}
+.qc-selection-button:has(input:focus), .qc-selection-button:focus, .qc-selection-button:has(textarea:focus) {
+  outline: 2px solid var(--qc-color-formfield-focus-outline);
+}
+.qc-selection-button:has(input:focus)::before, .qc-selection-button:focus::before, .qc-selection-button:has(textarea:focus)::before {
+  border: 2px solid var(--qc-color-formfield-focus-border);
+}
+.qc-selection-button input[type=radio],
+.qc-selection-button input[type=checkbox] {
+  min-width: var(--qc-spacer-sm);
+  min-height: var(--qc-spacer-sm);
+  margin-top: 0.4rem;
+  border-width: 0.1rem;
+}
+.qc-selection-button input[type=radio]:focus,
+.qc-selection-button input[type=checkbox]:focus {
+  outline: none;
+}
+.qc-selection-button::before {
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: var(--qc-color-grey-light);
+}
+.qc-selection-button:not(:has(input:focus, input:disabled)):hover::before {
+  border-color: var(--qc-color-blue-light);
+}
+.qc-selection-button:has(input:checked)::before {
+  background-color: var(--qc-color-blue-pale);
+}
+.qc-selection-button:has(input:disabled)::before {
+  background-color: var(--qc-color-grey-pale);
+}
+.qc-selection-button .qc-check-label {
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-semi-bold);
+}
+
+.qc-compact input[type=radio],
+.qc-compact input[type=checkbox] {
+  min-width: var(--qc-spacer-sm);
+  min-height: var(--qc-spacer-sm);
+  margin-top: 0.4rem;
+  border-width: 1px;
+}
+
+.qc-check-text {
+  display: flex;
+  flex-direction: column;
+  gap: var(--qc-spacer-xs);
+  min-height: var(--qc-spacer-md);
+}
+
+.qc-check-description {
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
+  margin: 0;
+}
+
+.qc-check-row-parent {
+  display: flex;
+  flex-grow: 1;
+}
+
+input[type=radio] {
   border-radius: 100%;
 }
-.qc-check-row input[type=radio]::before {
-  width: 1.4rem;
-  height: 1.4rem;
+input[type=radio]::before {
   border-radius: 100%;
   background-color: var(--qc-color-blue-regular);
 }
-.qc-check-row input[type=radio]:checked::before {
+input[type=radio]:checked::before {
   opacity: 1;
 }
-.qc-compact input[type=radio]::before {
+input[type=radio]:checked:not(.qc-compact)::before {
+  width: 1.4rem;
+  height: 1.4rem;
+}
+input[type=radio]:checked.qc-compact::before {
   width: 1rem;
   height: 1rem;
 }
 
 .qc-fieldset {
-  display: flex;
-  flex-direction: column;
   border: none;
   padding: 0;
   margin: 0 0 var(--qc-spacer-content-block-mb);
-  justify-items: center;
-  row-gap: var(--qc-spacer-sm);
+  justify-items: start;
 }
 .qc-fieldset legend {
   font-weight: var(--qc-font-weight-content-bold);
-  display: block;
+  display: inline-block;
   margin-bottom: var(--qc-spacer-md);
 }
 .qc-fieldset.qc-compact {
@@ -2120,10 +2204,51 @@ qc-search-bar {
   margin-left: calc(-1 * var(--qc-spacer-xs) - 2px);
 }
 
-.qc-check-row input[type=checkbox]:checked {
+.qc-field-elements-tiled, .qc-field-elements-tiled-flex-row {
+  gap: var(--qc-spacer-xs);
+}
+
+.qc-field-elements-tiled-flex-row {
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+.qc-field-elements-tiled-flex-row .qc-check-row-parent {
+  flex-grow: 0;
+}
+
+.qc-field-elements-tiled {
+  display: inline-grid;
+  grid-template-columns: repeat(var(--column-count), 1fr);
+}
+@media (max-width: 767.98px) {
+  .qc-field-elements-tiled {
+    grid-template-columns: 1fr;
+  }
+}
+
+.qc-field-elements-flex {
+  display: flex;
+  flex-direction: column;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+
+.qc-field-elements-flex-sm {
+  gap: var(--qc-spacer-sm);
+}
+
+.qc-field-elements-flex-md {
+  gap: var(--qc-spacer-md);
+}
+
+.qc-justify-end {
+  justify-items: end;
+}
+
+input[type=checkbox]:checked {
   background-color: var(--qc-color-blue-regular);
 }
-.qc-check-row input[type=checkbox]:checked::before {
+input[type=checkbox]:checked::before {
   width: 1.2rem;
   height: 0.7rem;
   border: 0.3rem solid var(--qc-color-blue-regular);
@@ -2132,7 +2257,7 @@ qc-search-bar {
   transform: rotate(-45deg);
   top: 0.2rem;
 }
-.qc-check-row input[type=checkbox]:checked::after {
+input[type=checkbox]:checked::after {
   content: "";
   position: absolute;
   left: 50%;
@@ -2149,6 +2274,19 @@ qc-search-bar {
   background-color: var(--qc-color-white);
   width: var(--qc-spacer-md);
   height: 1.8rem;
+}
+input[type=checkbox]:checked.qc-compact::before {
+  width: 0.8rem;
+  height: 0.5rem;
+  border: 0.2rem solid var(--qc-color-blue-regular);
+  border-top: 0;
+  border-right: 0;
+  transform: rotate(-45deg);
+  top: 0.1rem;
+}
+input[type=checkbox]:checked.qc-compact::after {
+  width: var(--qc-spacer-sm);
+  height: 1.2rem;
 }
 .qc-compact input[type=checkbox]:checked::before {
   width: 0.8rem;
@@ -2167,9 +2305,20 @@ qc-search-bar {
 .qc-checkbox-single {
   display: flex;
   flex-direction: column;
-  gap: 1.6rem;
   margin-bottom: var(--qc-spacer-content-block-mb);
+  width: -moz-fit-content;
+  width: fit-content;
 }
+.qc-checkbox-single label {
+  flex-grow: 0;
+}
+.checkbox-single {
+  padding-left: var(--qc-spacer-xs);
+}
+.checkbox-single.checkbox-single-invalid {
+  box-shadow: 0.2rem 0 var(--qc-color-red-regular) inset;
+}
+
 qc-textfield {
   display: block;
   width: 100%;
@@ -2303,6 +2452,7 @@ qc-textfield {
   color: var(--qc-color-red-regular);
   align-items: start;
   font-weight: var(--qc-font-weight-content-medium);
+  margin-top: var(--qc-spacer-sm);
 }
 .qc-form-error .qc-icon {
   display: flex;
@@ -2314,6 +2464,82 @@ qc-textfield {
 
 .qc-textfield-container .qc-form-error {
   margin-top: var(--qc-spacer-xs);
+}
+
+.qc-switch {
+  display: inline-flex;
+  margin: 0;
+  gap: var(--qc-spacer-sm);
+  position: relative;
+  cursor: pointer;
+}
+.qc-switch:has(input:disabled) {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+}
+.qc-switch input[type=checkbox] {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  position: absolute;
+}
+.qc-switch input[type=checkbox]:checked ~ .qc-switch-slider {
+  background-color: var(--qc-color-blue-regular);
+  border-color: transparent;
+}
+.qc-switch input[type=checkbox]:checked ~ .qc-switch-slider::before {
+  transform: translateX(2.4rem);
+}
+.qc-switch input[type=checkbox]:focus ~ .qc-switch-slider {
+  outline: 0.2rem solid var(--qc-color-blue-light);
+  outline-offset: 0.2rem;
+}
+.qc-switch input[type=checkbox]:disabled ~ .qc-switch-slider {
+  border-color: transparent;
+  cursor: not-allowed;
+}
+.qc-switch input[type=checkbox]:disabled ~ .qc-switch-slider::before {
+  border: none;
+}
+
+.qc-switch-label {
+  margin-top: 0.3rem;
+}
+
+.qc-switch-label-left {
+  justify-self: end;
+  justify-content: flex-end;
+  text-align: right;
+}
+
+.qc-switch-slider {
+  display: inline-flex;
+  position: relative;
+  cursor: pointer;
+  min-width: 5.6rem;
+  min-height: 3.2rem;
+  max-width: 5.6rem;
+  max-height: 3.2rem;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--qc-color-grey-light);
+  transition: background-color 0.3s ease-out;
+  border-radius: 1.6rem;
+  border: 0.1rem solid var(--qc-color-grey-medium);
+}
+.qc-switch-slider::before {
+  position: absolute;
+  content: "";
+  height: 2.8rem;
+  width: 2.8rem;
+  left: 0.1rem;
+  bottom: 0.1rem;
+  background-color: var(--qc-color-white);
+  border: 0.1rem solid var(--qc-color-grey-dark);
+  border-radius: 50%;
+  transition: all 0.3s ease-out;
 }
 
 .qc-label {
