--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -9,7 +9,7 @@
             name="text-sm"
             label="Entrez votre âge"
             size="sm"
-            placeholder="ex : 24"
+            placeholder="25"
     ></qc-textfield>
 
     <qc-textfield
@@ -55,7 +55,6 @@
             name="text-xxl"
             label="Entrez votre adresse"
             size="xxl"
-            placeholder="ex : 1234 rue du Moulin"
             disabled
     ></qc-textfield>
 
