--- a/src/sdg/components/ToggleSwitch/_toggleSwitch.html
+++ b/src/sdg/components/ToggleSwitch/_toggleSwitch.html
@@ -29,6 +29,7 @@
         id="switch-group"
         legend="Préférences de notifications de messages"
         justified
+        text-align="end"
     >
         <qc-toggle-switch
                 id="nouveaux-messages"
