--- a/src/sdg/components/ToggleSwitch/_toggleSwitch.scss
+++ b/src/sdg/components/ToggleSwitch/_toggleSwitch.scss
@@ -53,6 +53,10 @@ $border: 1;
   margin-top: rem(3);
 }
 
+.qc-switch-label-end {
+  text-align: end;
+}
+
 .qc-switch-slider {
   display: inline-flex;
   position: relative;
