Mise à jour de la doc du commutateur pour ajouter text-align

--- a/src/sdg/components/ToggleSwitch/_toggleSwitch.html
+++ b/src/sdg/components/ToggleSwitch/_toggleSwitch.html
@@ -117,6 +117,12 @@
             Permet au commutateur et son libellé de prendre toute la largeur disponible
         </td>
     </tr>
+    <tr>
+        <td>text-align</td>
+        <td>"start" ou "end"</td>
+        <td>"start"</td>
+        <td>Alignement du texte du libellé</td>
+    </tr>
     </tbody>
 </table>
 
@@ -144,15 +150,20 @@
         <td>Désactive le groupe de commutateurs</td>
     </tr>
     <tr>
-        <td>label-position</td>
-        <td>"left" ou "right"</td>
-        <td>"left"</td>
-    <tr>
         <td>justified</td>
         <td>na</td>
         <td>na</td>
         <td>
             Permet au commutateur et son libellé de prendre toute la largeur disponible.
+            <br> N.B. : Cette valeur a priorité sur celle des commutateurs du groupe.
+        </td>
+    </tr>
+    <tr>
+        <td>text-align</td>
+        <td>"start" ou "end"</td>
+        <td>"start"</td>
+        <td>
+            Alignement du texte des libellés des commutateurs
             <br> N.B. : Cette valeur a priorité sur celle des commutateurs du groupe.
         </td>
     </tr>
