--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2271,8 +2271,10 @@ input[type=radio]:checked.qc-compact::before {
 .qc-field-elements-flex {
   display: flex;
   flex-direction: column;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
+  width: var(--fieldset-width);
+}
+.qc-field-elements-flex .qc-switch-label {
+  flex-grow: 1;
 }
 
 .qc-field-elements-flex-sm {
@@ -2513,7 +2515,7 @@ qc-textfield {
 }
 
 .qc-switch {
-  display: inline-flex;
+  display: flex;
   margin: 0;
   gap: var(--qc-spacer-sm);
   position: relative;
@@ -2550,7 +2552,6 @@ qc-textfield {
 
 .qc-switch-label {
   display: flex;
-  flex-grow: 1;
   margin-top: 0.3rem;
 }
 
