Ajout d'exemple de liste déroulante en élément <select>

--- a/src/sdg/components/TextField/_textField.scss
+++ b/src/sdg/components/TextField/_textField.scss
@@ -59,6 +59,8 @@ qc-textfield {
 }
 
 .qc-textfield-container {
+  display: flex;
+  flex-direction: column;
   margin-bottom: rem(32);
 
   label {
