Ajout du composant "Champ de recherche" et mise à jour de la navigation et de la documentation

--- a/src/sdg/components/SearchInput/_searchInput.html
+++ b/src/sdg/components/SearchInput/_searchInput.html
@@ -1,2 +1,10 @@
-<h2>Champ de recherche</h2>
-<p>À compléter…</p>
+<h2 id="search-input">Champ de recherche</h2>
+<h3>Exemples</h3>
+
+<qc-doc-exemple>
+    <qc-search-input
+            placeholder="Rechercher un article"
+            aria-label="Rechercher un article"
+            left-icon
+    ></qc-search-input>
+</qc-doc-exemple>
