--- a/src/sdg/components/PivHeader/_pivHeader.html
+++ b/src/sdg/components/PivHeader/_pivHeader.html
@@ -17,7 +17,7 @@
                 caption="Exemple de personnalisation des liens du bandeau d’entête PIV"
 >
   <qc-piv-header
-          title-text="Nom du site"
+          title-text="Titre du site ou du service"
           title-url="https://www.quebec.ca/"
           alt-logo="Accédez à Québec.ca"
   >
@@ -38,7 +38,7 @@
 
 >
   <div id="pivEnteteExempleRecherchePersonnalisee">
-    <qc-piv-header title-text="Nom du site"
+    <qc-piv-header title-text="Titre du site ou du service"
                    alt-logo="Accédez à Québec.ca"
                    enable-search="true"
                    show-search="true"
